# boids

./: .gitignore  CMakeLists.txt  readme-portuguese.txt  readme.txt
source/: Engine.cpp  Engine.hh  Engine.hpp  GameObject.hpp  Window.hh  callbacks.hpp  defs.hpp  glfw.hpp  main.cpp  objects.cpp  objects.hpp
source/component/: AnimationComponent.hpp  Component.hpp  componentIds.hpp  componentRegistration.hpp.inc
source/gameObject/: Boid.hpp  Cone.hpp  FollowBoid.cpp  FollowBoid.hpp  GameObject.hpp  ObjectiveBoid.hpp  Tower.hpp
source/math/: EulerAngles.hh  EulerAngles.hpp  Matrix4D.hh  Matrix4d.hpp  Plane.hpp  Point.hh  Point.hpp  Quaternion.hh  Quaternion.hpp  Vector.hh  Vector.hpp  math.hh  math.hpp
source/state/: DebugState.hpp  IdleState.hpp  PauseState.hpp  RunState.hpp  State.hpp  StateContainer.hpp  StateFactory.cpp  StateFactory.hpp  StateManager.hpp
source/system/: AnimationSystem.cpp  AnimationSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.hpp
source/util/: Noncopyable.hpp  draw.cpp  draw.hpp  noncopyable.hpp  singleton.hpp  sleep.cpp  sleep.hpp
